--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,9 +4,9 @@ version: 0.2
 env:
   variables:
     AWS_REGION: us-east-1
-    AWS_ACCOUNT_ID: 863026773245
-    IMAGE_NAME: ecr-tutorial-image
-    CONTAINER_NAME: ecr-tutorial-image
+    AWS_ACCOUNT_ID: 708995052028
+    IMAGE_NAME: aws-pipeline-with-ecs-rolling-update-deployment-image
+    CONTAINER_NAME: ecs-rolling-update-container
 
 
 phases:
